# PolyScan

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: eval.yml  fcn.yml  inference.yml  unet.yml
data_tools/: __init__.py  dataset.py  loader.py  split.py  validate.py
src/: data_loader.py  evaluate.py  helpers.py  inference.py  models.py  train.py
src/architectures/: __init__.py  fcn.py  unet.py
src/evaluation/: evaluate.py  helpers.py
src/metrics/: __init__.py  clinical.py  dice.py  hd95.py  iou.py
src/train/: train.py
src/training/: __init__.py  train.py
src/training/config/: defaults.py  parser.py
src/training/core/: __init__.py  callbacks.py  helpers.py  trainer.py
src/training/tracking/: __init__.py  mlflow.py
src/visualization/: __init__.py  overlay.py  plotting.py
